syntax = "proto3";

package dev.ramesh.grpc.model;

option java_package = "dev.ramesh.grpc.models";
option java_multiple_files = true;
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;



message Person{
  int32 id = 1;
  string first_name =  2;
  string last_name =  3;
  string email = 4;
  int64 phone_number = 5;
}